--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <h2 class="text-stroke" style="margin-top: 3rem;" data-aos="fade-down"><span>resep</span></h2>
       <div class="line-more-section"></div>
       <div class="row">
-        <div class="container">
+        <div class="container" data-aos="fade-right">
           <p><strong> BAHAN-BAHAN: </strong></p>
           <p>250 ml air (lebih bagus pake air kelapa)
 230 gram gula merah
@@ -366,16 +366,16 @@ secukupnya Minyak goreng</p>
 </section>
 
  <section class="contact" id="contact">
-  <h2 class="text-stroke"><span>Contact</span></h2>
+  <h2 class="text-stroke" data-aos="fade-down"><span>Contact</span></h2>
   <div class="line-more-section"></div>
 
-  <div class="container">
+  <div class="container" data-aos="fade-in">
     <p>Hubungi kami untuk pemesanan, pertanyaan, atau informasi lebih lanjut.</p>
   </div>
 
   <div class="row">
     <!-- MAP -->
-    <iframe
+    <iframe data-aos="fade-down"
       src="https://www.google.com/maps?q=-6.9808388,109.1389389&z=17&output=embed"
       allowfullscreen
       loading="lazy"
@@ -385,7 +385,7 @@ secukupnya Minyak goreng</p>
     ></iframe>
 
     <!-- INFORMASI KONTAK -->
-    <div class="ringkasan">
+    <div class="ringkasan" data-aos="fade-left">
       <div class="info-item">
         <h3>Alamat Kami</h3>
         <p>
@@ -394,18 +394,18 @@ secukupnya Minyak goreng</p>
         </p>
       </div>
 
-      <div class="info-item">
+      <div class="info-item" data-aos="fade-left">
         <h3>Jam Operasional</h3>
         <p>Senin – Sabtu: 06.00 – 16.00 WIB</p>
         <p>Minggu: 06.00 – 15.00 WIB</p>
       </div>
 
-      <div class="info-item">
+      <div class="info-item" data-aos="fade-left">
         <h3>Nomor Telepon</h3>
         <p><a href="tel:+6281902068886">081902068886</a></p>
       </div>
 
-      <div class="info-item">
+      <div class="info-item" data-aos="fade-left">
         <h3>Email</h3>
         <p><a href="mailto:familycatering@gmail.com">familycatering@gmail.com</a></p>
       </div>
