--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
   <body>
     <!-- navbar -->
     <nav class="navbar" data-aos="fade-down">
-      <a href="#" class="navbar-logo"
-        ><span style="font-size: 3.5rem">K</span>ue<span
-          style="font-size: 2.5rem"
-          >C</span
-        >ucur.</a
-      >
+      <div class="navbar-logo1">
+        <img data-aos="zoom-out" src="img/logo/logo.png" alt="">
+      </div>
 
       <div class="navbar-nav">
         <a href="#">Home</a>
