--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <!-- profil -->
-    <section id="profil" class="profil">
+    <section id="profil" class="profil glow-border">
       <h2 style="text-stroke" data-aos="zoom-in"><span>Profil</span></h2>
       <div class="row">
         <ul class="container" data-aos="flip-up">
@@ -274,9 +274,9 @@ secukupnya Minyak goreng</p>
               <p style="margin-top: 1rem;">5. Biasanya Bapak/Ibu menjualnya dengan harga berapa 1pcs nya?</p>
               <strong><p>jawab: Biasanya dijual Rp1.500–Rp3.000 per buah.</p></strong>
               <p style="margin-top: 1rem;">6. Apakah Bapak/Ibu berencana mengembangkan usaha ini lebih besar lagi?</p>
-              <strong><p>jawab: saya berharap ke depannya bisa membuka kios sendiri dan menambah variasi jajanan tradisional lainnya. </p></strong>
+              <strong><p>jawab: saya berharap ke depan bisa membuka kios sendiri dan menambah variasi jajanan tradisional lainnya. </p></strong>
               <p style="margin-top: 1rem;">7. Siapa yang mengajari Bapak/Ibu membuat kue cucur pertama kali?</p>
-              <strong><p style="margin-bottom: 1rem;">jawab: Saya belajar dari ibu saya, yang dahulu pernah berjualan kue cucur</p></strong>
+              <strong><p style="margin-bottom: 1rem;">jawab: Saya belajar dari ibu saya, yang sempat pernah berjuaalan zaman dahulu</p></strong>
           </div>
         </div>
       </div>
@@ -353,7 +353,7 @@ secukupnya Minyak goreng</p>
             <h3>PROFIL</h3>
             <p class="card-desk">NAMA : Febrian Cantika Putri</p>
             <p class="card-desk">TTL : 25 Februari 2008</p>
-            <p class="card-desk">HOBI : Berenang</p>
+            <p class="card-desk">HOBI : Renang</p>
             <p class="card-desk">CITA-CITA : Ahli Mikrobiologi</p>
           </div>
         </div>
