--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ secukupnya Minyak goreng</p>
               <p style="margin-top: 1rem;">6. Apakah Bapak/Ibu berencana mengembangkan usaha ini lebih besar lagi?</p>
               <strong><p>jawab: saya berharap ke depan bisa membuka kios sendiri dan menambah variasi jajanan tradisional lainnya. </p></strong>
               <p style="margin-top: 1rem;">7. Siapa yang mengajari Bapak/Ibu membuat kue cucur pertama kali?</p>
-              <strong><p style="margin-bottom: 1rem;">jawab: Saya belajar dari ibu saya, yang sempat pernah berjuaalan zaman dahulu</p></strong>
+              <strong><p style="margin-bottom: 1rem;">jawab: Saya belajar dari ibu saya, yang sempat pernah berjualan zaman dahulu</p></strong>
           </div>
         </div>
       </div>
@@ -353,7 +353,7 @@ secukupnya Minyak goreng</p>
             <h3>PROFIL</h3>
             <p class="card-desk">NAMA : Febrian Cantika Putri</p>
             <p class="card-desk">TTL : 25 Februari 2008</p>
-            <p class="card-desk">HOBI : Renang</p>
+            <p class="card-desk">HOBI : Berenang</p>
             <p class="card-desk">CITA-CITA : Ahli Mikrobiologi</p>
           </div>
         </div>
